<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262525">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/img_ruleta"
        app:srcCompat="@drawable/ruleta"
        android:layout_width="416dp"
        android:layout_height="455dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/botonJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/botonJugar"
        android:text="@string/btn_jugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0F3610"
        android:textColor="#F6F6F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/botonOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0F3610"
        android:text="@string/btn_opciones"
        android:textColor="#F6F6F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonJugar"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0F3610"
        android:text="@string/btn_salir"
        android:textColor="#F6F6F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonOpciones"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
