<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262525">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="36dp"
        android:text="@string/opciones"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="209dp"
        android:text="@string/brillo"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/barraBrillo"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <SeekBar
        android:id="@+id/barraBrillo"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        app:layout_constraintBottom_toTopOf="@+id/barraVolumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="188dp"
        android:text="@string/volumen"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/barraVolumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraBrillo" />

    <SeekBar
        android:id="@+id/barraVolumen"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/silenciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/silenciar"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="66dp"
        android:buttonTint="@color/white"
        android:text="@string/silenciar_m_sica"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraVolumen" />

    <Button
        android:id="@+id/botonInicio"
        android:layout_width="264dp"
        android:layout_height="76dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#2B752F"
        android:text="@string/volver_a_inicio"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:contentDescription="@string/volver_a_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/silenciar" />
</androidx.constraintlayout.widget.ConstraintLayout>
